--- a/templates/index_v2.html
+++ b/templates/index_v2.html
@@ -34,11 +34,16 @@
                     <li><a href="{{ url_for('search') }}"><b>Search</b></a></li>
                     <li><a href="{{ url_for('explore') }}"><b>Explore</b></a></li>
                     <li><a href="{{ url_for('docs') }}"><b>Docs</b></a></li>
-                    <li><a href="#"><b>Blog</b></a></li>
+                    <li><a href="{{ url_for('blogs') }}"><b>Blog</b></a></li> <!-- Link to Blogs -->
                 </ul>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="#"><b>Login</b></a></li>
-                    <li><a href="#"><b>Sign Up</b></a></li>
+                    {% if session.get('user_id') %}
+                        <li><a href="{{ url_for('profile') }}"><b>Profile</b></a></li> <!-- Link to Profile -->
+                        <li><a href="{{ url_for('logout') }}"><b>Logout</b></a></li>
+                    {% else %}
+                        <li><a href="{{ url_for('login') }}"><b>Login</b></a></li> <!-- Link to Login -->
+                        <li><a href="{{ url_for('signup') }}"><b>Sign Up</b></a></li> <!-- Link to Sign Up -->
+                    {% endif %}
                 </ul>
 
                 <!-- Mobile Navigation Menu -->
@@ -46,10 +51,15 @@
                     <a href="#landing"><b>Home</b></a>
                     <a href="{{ url_for('search') }}"><b>Search</b></a>
                     <a href="{{ url_for('explore') }}"><b>Explore</b></a>
-                    <a href="#"><b>Docs</b></a>
-                    <a href="#"><b>Blog</b></a></li>
-                    <a href="#"><b>Login</b></a></li>
-                    <a href="#"><b>Sign Up</b></a></li>
+                    <a href="{{ url_for('docs') }}"><b>Docs</b></a>
+                    <a href="{{ url_for('blogs') }}"><b>Blog</b></a> <!-- Link to Blogs -->
+                    {% if session.get('user_id') %}
+                        <a href="{{ url_for('profile') }}"><b>Profile</b></a>
+                        <a href="{{ url_for('logout') }}"><b>Logout</b></a>
+                    {% else %}
+                        <a href="{{ url_for('login') }}"><b>Login</b></a>
+                        <a href="{{ url_for('signup') }}"><b>Sign Up</b></a>
+                    {% endif %}
                 </div>
             </div>
         </nav>
@@ -159,95 +169,22 @@
     <!-- Blog Section -->
     <div class="section" id="community">
         <div class="container">
-            <h2 class="blog-header">Blogs</h2>
+            <h2 class="blog-header">Latest Blogs</h2>
             <h4 class="blog-line">Insights and Discussions: Dive into the World of AYUSH</h4>
-            <div class="blog-container">
-                <!-- First Column -->
-                <div class="blog-column">
-                    <div class="blog-post">
-                        <img src="{{ url_for('static', filename='images/img1.jpg') }}" alt="Blog Image 1">
-                        <h3>Blog Title 1</h3>
-                        <p>Short description of the blog post.</p>
+            <div class="blogs-grid">
+                {% for blog in blogs[:6] %} <!-- Display the latest 6 blogs -->
+                    <div class="blog-card">
+                        <img src="{{ blog.image_url or url_for('static', filename='images/default-blog.jpg') }}" alt="Blog Image">
+                        <div class="blog-content">
+                            <h3>{{ blog.title }}</h3>
+                            <p>{{ blog.content[:100]|safe }}...</p> <!-- Render content as HTML -->
+                            <a href="{{ url_for('blog_detail', blog_id=blog.id) }}" class="btn view">Read More</a>
+                        </div>
                     </div>
-                    <div class="blog-post">
-                        <img src="{{ url_for('static', filename='images/img2.jpg') }}" alt="Blog Image 2">
-                        <h3>Blog Title 2</h3>
-                        <p>Short description of the blog post.</p>
-                    </div>
-                    <div class="blog-post">
-                        <img src="{{ url_for('static', filename='images/img3.jpg') }}" alt="Blog Image 3">
-                        <h3>Blog Title 3</h3>
-                        <p>Short description of the blog post.</p>
-                    </div>
-                    <div class="blog-post">
-                        <img src="{{ url_for('static', filename='images/img4.jpg') }}" alt="Blog Image 4">
-                        <h3>Blog Title 4</h3>
-                        <p>Short description of the blog post.</p>
-                    </div>
-                </div>
-                <!-- Second Column -->
-                <div class="blog-column">
-                    <div class="blog-post">
-                        <img src="{{ url_for('static', filename='images/img5.jpg') }}" alt="Blog Image 5">
-                        <h3>Blog Title 5</h3>
-                        <p>Short description of the blog post.</p>
-                    </div>
-                    <div class="blog-post">
-                        <img src="{{ url_for('static', filename='images/img6.jpg') }}" alt="Blog Image 6">
-                        <h3>Blog Title 6</h3>
-                        <p>Short description of the blog post.</p>
-                    </div>
-                    <div class="blog-post">
-                        <img src="{{ url_for('static', filename='images/img7.jpg') }}" alt="Blog Image 7">
-                        <h3>Blog Title 7</h3>
-                        <p>Short description of the blog post.</p>
-                    </div>
-                </div>
-                <!-- Third Column -->
-                <div class="blog-column">
-                    <div class="blog-post">
-                        <img src="{{ url_for('static', filename='images/img9.jpg') }}" alt="Blog Image 9">
-                        <h3>Blog Title 8</h3>
-                        <p>Short description of the blog post.</p>
-                    </div>
-                    <div class="blog-post">
-                        <img src="{{ url_for('static', filename='images/img10.jpg') }}" alt="Blog Image 10">
-                        <h3>Blog Title 9</h3>
-                        <p>Short description of the blog post.</p>
-                    </div>
-                    <div class="blog-post">
-                        <img src="{{ url_for('static', filename='images/img11.jpg') }}" alt="Blog Image 11">
-                        <h3>Blog Title 10</h3>
-                        <p>Short description of the blog post.</p>
-                    </div>
-
-                </div>
-                <!-- Fourth Column -->
-                <div class="blog-column">
-                    <div class="blog-post">
-                        <img src="{{ url_for('static', filename='images/img13.jpg') }}" alt="Blog Image 12">
-                        <h3>Blog Title 11</h3>
-                        <p>Short description of the blog post.</p>
-                    </div>
-                    <div class="blog-post">
-                        <img src="{{ url_for('static', filename='images/img14.jpg') }}" alt="Blog Image 13">
-                        <h3>Blog Title 12</h3>
-                        <p>Short description of the blog post.</p>
-                    </div>
-                    <div class="blog-post">
-                        <img src="{{ url_for('static', filename='images/img15.jpg') }}" alt="Blog Image 14">
-                        <h3>Blog Title 13</h3>
-                        <p>Short description of the blog post.</p>
-                    </div>
-                    <div class="blog-post">
-                        <img src="{{ url_for('static', filename='images/img16.jpg') }}" alt="Blog Image 15">
-                        <h3>Blog Title 14</h3>
-                        <p>Short description of the blog post.</p>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
             <div class="blog-btn-container">
-                <a href="#">
+                <a href="{{ url_for('blogs') }}">
                     <button class="blog-btn">
                         See All Blogs
                         <span class="arrow">&rarr;</span> <!-- Right arrow -->
@@ -268,5 +205,15 @@
     <script src="{{ url_for('static', filename='js/responsive.js') }}"></script>
     <script src="{{ url_for('static', filename='js/landing-page.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Initialize dropdown
+            var dropdowns = document.querySelectorAll('.dropdown-trigger');
+            M.Dropdown.init(dropdowns, {
+                constrainWidth: false, // Allow dropdown to adjust width
+                coverTrigger: false   // Dropdown appears below the trigger
+            });
+        });
+    </script>
 </body>
 </html>
